Mar 12 2006  devel  I know it's been a while, stuff going on in life, sorry.
                    Added CARD protocol support to kp_frontend
                    Changed behavior of kp_Scrollable_Table to add a row
                     during a replace of a nonexistent row
Feb 22 2006  devel  Lots of un-changelog'd work in svn
                    Increased max iwpriv ioctls per interface, will produce
                     a different error on madwifi-ng using madwifi-old sources
                    Finished cli matrix widget
                    Added ModalAlert panel
                    "File->Connect" actually connects to the Kismet server
Feb 02 2006  devel  More work on panels client
                    Work on new tcp client code
                    Fixed stupid error in server that didn't send capabilities
Jan 16 2006  devel  Finished client panel single input line widget
                    Fixed menu not eating input when selecting nonexistent
                     menus or items via keyboard
                    Fixed consecutive disabled items in menus
                    Fixed stupid error in window positioning
                    Added button widget
                    Added "Connect" demo window
Jan 12 2006  devel  Finished client panel menu widget code
                    Finished client panel arbitrary text scroller widget code
                    Added Madwifi-NG support (with dyanamic interface
                     creation and destruction support)
                    Removed prism2 header length validation, not needed and
                     some drivers are broken
                    Split widgets and windows into their own files
                    Added client panel 2-field widget
                    Added picking list type demo
                    Added inline text style formatting class, added to
                     freetext widget
Jan 08 2006  devel  Started newcore client development (Current client code