@@ -1,3 +1,4 @@
+Mar 20 2006  devel  Added keepalive to drone protocol
 Mar 12 2006  devel  I know it's been a while, stuff going on in life, sorry.
                     Added CARD protocol support to kp_frontend
                     Changed behavior of kp_Scrollable_Table to add a row
